fixed bug withthe color for fairy type pokemon not showing

--- a/rapidex.css
+++ b/rapidex.css
@@ -99,7 +99,7 @@ body {
     outline-style: solid;
     outline-color: #b7b7b7;
     outline-width: 3px;
-    width: 325px;
+    max-width: 325px;
     min-height: 170px;
     margin: 0 auto;
     padding: 5px;
